--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.7",
     "aos": "^2.3.4",
+    "axios-retry": "^4.5.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.7",
     "tailwindcss-animated": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/aos": "^3.0.7",
+    "@types/node": "^22.15.29",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
