--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.1.7",
     "tailwindcss-animated": "^2.0.0"
   },
