--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "aos": "^2.3.4",
     "axios-retry": "^4.5.0",
+    "papaparse": "^5.5.3",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -33,6 +34,7 @@
     "@eslint/js": "^9.25.0",
     "@types/aos": "^3.0.7",
     "@types/node": "^22.15.29",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
