--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "aos": "^2.3.4",
     "axios-retry": "^4.5.0",
+    "chart.js": "^4.4.9",
     "papaparse": "^5.5.3",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
