change file structure

--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
 VITE_API_URL='https://w.bankon.click/api'
-VITE_BASE_URL=''
-
-VITE_BASE_CSVFILE='https://w.bankon.click/asset/data/reportu/'
-
-VITE_REALTIMECHART='https://w.bankon.click/asset/data/report/data_info.csv'
+VITE_BASE_URL='https://banks.trade'
+VITE_BASE_CSVFILE='https://w.bankon.click/asset/data/reportu/' 
